--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="amansxcalibur.github.io/">
-<link crossorigin="anonymous" href="/amansxcalibur.github.io/assets/css/stylesheet.css" integrity="sha256-XPxoCx7q7vnvvO2S1Gwqnodrcu4U&#43;6hYRq/Ez/nm5vg=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="assets/css/stylesheet.css" integrity="sha256-XPxoCx7q7vnvvO2S1Gwqnodrcu4U&#43;6hYRq/Ez/nm5vg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="amansxcalibur.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="amansxcalibur.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="amansxcalibur.github.io/favicon-32x32.png">
